@@ -17,7 +17,6 @@
  * @version         $Id$
  */
 
-
 /**
  * Class XoocontactMail
  */
